// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Square Component renders correctly 1`] = `
<div
  className="square"
/>
`;

exports[`Square Component renders correctly when walls are present 1`] = `
<div
  className="top bottom square"
/>
`;
